# agentic-ai-tutorial

./: 1_simple_agentic_ai.ipynb  1_simple_agentic_ai.py  2_agent_with_short_memory.ipynb  2_agent_with_short_memory.py  3_agent_with_long_term_memory.ipynb  4_agent_with_long_term_memory_and_loop.ipynb  5_1_agent_with_crewai.ipynb  5_agent_with_the_help of Langchain.ipynb  6_1_Coading_Agent_with_Crew_ai.ipynb  6_1_CrewAI_Coading_Agent_with_memory.ipynb  6_2_CrewAI_suprevisor_Agent.ipynb  6_2_CrewAI_suprevisor_Agent_with_code_and_rag.ipynb  6_Rag_Agent_with_Crew_ai.ipynb  Agents.py  README.md  main.py  memory.json  memory_V2.json  pyproject.toml
Data/: HR_Policy.txt
