[project]
name = "agentic-ai-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai>=0.159.0",
    "duckduckgo-search>=8.1.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "ollama>=0.5.3",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
    "wikipedia>=1.4.0",
]
